# sinpol

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  sinpol.yml  sinpol23
docs/: Paper.md  api.rst  conf.py  index.rst  paper.bib  paper.md  tutorial.rst
docs/data/: allpole.txt  recrystEuler.txt
sinpol/: Cu.cif  crystaldata.py  diffmodels.py  sampledata.py  scatteringcal.py  stressstrainmodels.py
tests/: Cu.cif  test_crystaldata.py  test_sampledata.py  test_scatteringcal.py  test_strainstressmodels.py
tests/data/: cu_nxsabs.npy  cu_nxstdsmp.npy  cu_nxstdssp.npy  cucrystaldata.npy  cuneutronics.npy  cupar.npy  cuphklb.npy  cuphklm.npy  cupos.npy  index.npy  polycu111hill-long.npy  polycu111hill-trans.npy  polycu111kroner-long.npy  polycu111kroner-trans.npy  polycu111reuss-long.npy  polycu111reuss-trans.npy  polycu111voigt-long.npy  polycu111voigt-trans.npy  singlecu111hill-long.npy  singlecu111hill-trans.npy  singlecu111hill-transverse.npy  singlecu111kroner-long.npy  singlecu111kroner-trans.npy  singlecu111kroner-transverse.npy  singlecu111reuss-long.npy  singlecu111reuss-trans.npy  singlecu111reuss-transverse.npy  singlecu111voigt-long.npy  singlecu111voigt-trans.npy  singlecu111voigt-transverse.npy  transpolyg.npy  transpolyr.npy  transsindeg.npy  transsinhkl.npy
