# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sinpol-transmission"
version = "1.1"
description = "Single crystal to polycrystal neutron trasnmission and diffraction simulation engine"
readme = "README.md"
authors = [{ name = "Luc Dessieux", email = "Dessieuxll@ornl.gov" }]
license = { file = "LICENSE" }
classifiers = ['Development Status :: 3 - Alpha',
                   'License :: OSI Approved :: BSD License', 
                   'Topic :: Scientific/Engineering :: Physics',
                   'Intended Audience :: Developers',
                   'Programming Language :: Python :: 3.10',
                   'Programming Language :: Python :: 3.11']
keywords = ["neutron transmission simulation", "neutron Bragg edge simulation", "neutron transmission single crystal simulation"]
dependencies = [
    "periodictable",
    "mpmath",
    "elementy",
    "scipy",
    "numba",
    "numba-mpi",
    "ase",

  
    

]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [ "black", "bumpver", "isort", "pip-tools", "pytest"]
matlab=["sinpol-transmission",]
[project.urls]
Homepage = "https://github.com/lldj15/sinpol"

[project.scripts]
sinpol = "sinpol.__main__:main"
[tool.bumpver]
current_version = "2024.1002-alpha"
version_pattern = "YYYY.BUILD[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"setup.py" = [
    "{version}",
    "{pep440_version}",
]


[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-64"]
[tool.pixi.dependencies]
python = ">=3.10,<3.11"
pip = "*"
numba = "*"
cctbx ="*"
"diffpy.structure" ="*"
cmake = "3.18.*"
c-compiler = "*"
cxx-compiler = "*"
ninja = "*"
h5py = ">=3.13.0,<4"
[package.build.config]
# Set explicit CMake args for building the package
extra-args = ["-DCMAKE_BUILD_TYPE=Release", "-DENABLE_TESTING=OFF"]
[tool.pixi.pypi-dependencies]
sinpol-transmission = { path = ".", editable = true }
NumbaQuadpack = { git = "https://github.com/Nicholaswogan/NumbaQuadpack.git" }
[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
matlab = { features = ["matlab"], solve-group = "default" }

[tool.pixi.tasks]
